--- a/README.Rmd
+++ b/README.Rmd
@@ -19,18 +19,17 @@ In addition, **hybriddetective** includes plotting functionality to generate bot
 **Function name** | **Synopsis** | **Main use**  
 ------------|------------------------------------------|------------------------------------------------------------------
 **getTopLoc.R**  | Creates a panel comprised of the top *n* unlinked loci. Exports a list of loci, and a dataset to be used in the simulation functions in **parallelnewhybrid** (<https://github.com/bwringe/parallelnewhybrid>), or another programme.| [_Data Preparation_](#gettoploc)
-**freqbasedsim_Advanced.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. Allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedADV)
-**freqbasedsim_UB2.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. A less biased version of the simulation function which allows the user to specify the proportion of individuals in each of the two ancestral populations to be used to generate the allele frequencies upon which to base the simulations. Also allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedUB2)
+**freqbasedsim_GTFreq.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. Samples based solely on allele frequencies in the provided populations. Alleles are sampled without replacement from the two populations. Allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedADV)
+**freqbasedsim_AlleleSample.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. A less biased version of the simulation function which allows the user to specify the proportion of individuals in each of the two ancestral populations to be used to generate the allele frequencies upon which to base the simulations. Also allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedUB2)
 **nh_data_generateR.R** |   Merges specified simulated reference datasets with the genotypes of unknown/experimental individuals, producing a file to be analyzed by *NewHybrids* | [_Data Preparation_](#nhdatageneratR)
-**nh_analysis_data_generatoR.R** |   Quickly creates simulated reference populations from user provided data, and merges these with the genotypes of unknown/experimental individuals, producing a file to be analyzed by *NewHybrids*| [_Data Preparation_](#nhanalysisdata)
+**nh_analysis_simulateR_generateR.R** |   Quickly creates simulated reference populations from user provided data, and merges these with the genotypes of unknown/experimental individuals, producing a file to be analyzed by *NewHybrids*| [_Data Preparation_](#nhanalysisdata)
 **nh_subsetR.R** |  Subset loci from *NewHybrids* format datasets| [_Data Preparation_](#nhsubset)
 **nh_analysis_data_generatoR.R** |   Quickly creates simulated reference populations from user provided data, and merges these with the genotypes of unknown/experimental individuals, producing a file to be analyzed by *NewHybrids*| [_Data Preparation_](#nhanalysisdata)
-**nh_zcore.R** |  Inserts known genotype category assignments to *NewHybrids* format files (see Anderson 2002)| [_Data Preparation_](#zcore)
-**preCheckR.R** | Checks all *NewHybrids* results within a given directory to ensure they have converged| [_Error Checking and Diagnostics_](#precheck)
+**nh_Zcore.R** |  Inserts known genotype category assignments to *NewHybrids* format files (see Anderson 2002)| [_Data Preparation_](#zcore)
+**nh_preCheckR.R** | Checks all *NewHybrids* results within a given directory to ensure they have converged| [_Error Checking and Diagnostics_](#precheck)
 **nh_plotR.R** |  Plots cumulative probability of assignments from *NewHybrids* results for each individual | [_Error Checking and Diagnostics_](#plotR)
 **nh_multiplotR.R** |  Plots cumulative probability of assignments from *NewHybrids* results for each individual for all results within a given folder | [_Error Checking and Diagnostics_](#multiplotR)
 **nh_accuracy_checkR.R** | Calculates and can print to screen the proportion of simulated individuals assigned to the correct hybrid category at three levels of stringency (PofZ >= 0.5, 0.75 and 0.9) | [_Error Checking and Diagnostics_](#accuracy)
-**hybridpower.R** |  Evaluates the accuracy with which *NewHybrids* assigns individuals of known hybrid class to the correct hybrid class in simulated datasets at varying levels of stringency (PofZ). Will also write graphical and numerical results to a directory provided by the user.|  [_Quantification and Analysis_](#power)
 **hybridpowercomp.R** |  Replicates the functionality of *hybridpower*, but allows the efficacy of multiple panels of varying numbers of markers to be compared.| [_Quantification and Analysis_](#powercomp)
 **nh_panel_delta_plotR.R** |  Plots the change in individual genotype class probability of assignment for different panel sizes.| [_Quantification and Analysis_](#deltaplot)
 
@@ -104,10 +103,11 @@ your.path = paste0(path.hold, "/hybriddetective example/")
 
 ### **hybriddetective** Contributors
 
-* Brendan Wringe <https://github.com/bwringe>; bwringe(at)gmail.com; Corresponding author  
+* Dr. Brendan Wringe <https://github.com/bwringe>; bwringe(at)gmail.com; Corresponding author  
 * Dr. Ian Bradbury <http://tinyurl.com/h3qrhkv>  
 * Dr. Nick Jeffery <https://github.com/NickJeff13>  
 * Dr. Ryan Stanley <https://github.com/rystanley> 
+* Dr. Eric Anderson <https://github.com/eriqande>
 
 This package has been designed to work in conjunction with the packages **parallelnewhybrid** (<https://github.com/bwringe/parallelnewhybrid>) and **genepopedit** (<https://github.com/rystanley/genepopedit>) to offer a more efficient and repeatable method of detecting hybrid individuals based on genomic data. This is accomplished by moving the workflow into the R environment. The package is open, and interested individuals are encouraged to modify the code for their purposes if needed. I will endeavour to respond in a timely manner to any and all inquiries, and will try to add requested functions, or functionality where requested.
 
@@ -172,9 +172,9 @@ getTopLoc(GPD = your_example_data_path, panel.size = 50, where.PLINK = your_plin
 
 ***
 
-<a name = "freqbased"/>
-<h4 class="text-primary"> freqbasedsim.R</h4>
-This function will simulate multigenerational hybrids based on the allele frequencies of the two reference populations provided. The reference populations must be provided as a single *GenePop* format text file, such as the file created by **getTopLoc**.  
+<a name = "freqbasedADV"/>
+<h4 class="text-primary"> freqbasedsim_GTFreq.R</h4>
+This function will simulate multigenerational hybrids based on the allele frequencies of the two reference populations provided. The reference populations must be provided as a single *GenePop* format text file, such as the file created by **getTopLoc**. The user may specify the number of individuals in each of the hybrid genotype frequency classes to be simulated.   
 The function first creates Pure1 and Pure2 populations by drawing 2 alleles from each loci, per individual, based on the allele frequencies in the two reference populations. By so doing, the genotypes of the reference populations are centred, and linkage disequilibria or deviations from Hardy-Weinberg that may have been present in the sampled individuals are eliminated. Subsequently, each F1 individual is created by drawing 1 allele per loci from the Pure1 and 1 from the Pure2 based on their allele frequencies in their respective population. F2 indivduals are created by drawning 2 alleles per loci based on the allele frequencies in the F1. Backcross individuals are created by drawing 1 allele per loci based on the allele frequencies in the F1, and one from the appropriate Pure population.
 
 **Parameter** | **Description**
@@ -188,51 +188,23 @@ The function first creates Pure1 and Pure2 populations by drawing 2 alleles from
 
 ####Usage
 ```r
-### Create a simulated dataset comprised of 200 individuals in each of the six genotype frequency classes (i.e. Pure1, Pure2, F1, F2, BC1 and BC2)
-### Use the output from getTopLoc
-
-### NOTE: "YourReferenceData.txt" is either data in that you wish to simulate in GenePop format OR
-  ## if you going through the package example, it will be the file "SimPurePops_50_Loci_Panel.txt" created by getTopLoc
-
-freqbasedsim(GenePopData = "~/ ... /YourReferenceData.txt", sample.size = 200, NumSims = 3, NumReps = 3)
-```
-
-***
-
-<a name = "freqbasedADV"/>
-<h4 class="text-primary"> freqbasedsim_Advanced.R</h4>
-This function will simulate multigenerational hybrids based on the allele frequencies of the two reference populations provided in the same manner as **freqbasedsim**. The only difference is that **freqbasedsim_Advanced** allows users greater flexibility in specifying the number of individuals in each of the hybrid genotype frequency classes to be simulated.  
-
-**Parameter** | **Description**
-------------|---------------------------------------------------------------  
-*GenePopData*| GenePop formatted file containing genotypes from two (2) ancestral populations. This is the data from which the simulated hybrids will be constructed  
-*pop.groups*|An optional character vector denoting how the two ancestral populations should be named; default is PopA and PopB
-*outputName*|An optioanal character vector to be applied as the name of the output. The default is NULL, in which case the output name is constructed from the name of the input, with the suffix *\_SiRj_NH* added where *i* is the number of *S*imulations corresponding to the output, and *j* is the number of *R*eplicates of the *ith* simulation. NH refers to the fact that the output is in *NewHybrids* format.  
-*sample.sizePure*|An optional integer to specify the number of simulated  Pure1 and Pure2 individuals (centred ancestral populations) to be created. Default is 200  
-*sample.sizeF1*|An optional integer to specify the number of simulated  F1 individuals (Pure1 X Pure2) to be created. Default is 200  
-*sample.sizeF2*|An optional integer to specify the number of simulated  F2 dividuals (F1 X F1) to be created. Default is 200  
-*sample.sizeBC*|An optional integer to specify the number of simulated  Back Cross1 and BackCross2 individuals (Pure1 X F1 and Pure2XF2) to be created. Default is 200  
-*NumSims*|An integer number of simulated datasets to be created. Default is 1  
-*NumReps*|An integer number of replicates to be created for each of the *i* simulated datasets specified in NumSims. Default is 1  
-
-####Usage
-```r
-## If the number of Pure, F1, F2 and Backcross individuals to be returned is not specified, this function is the same as freqbasedsim. Because NewHybrids utilizes a Bayesian algorithm, results may be influenced by the proportions of individuals of different genotypic frequency categories provided, thus this function can be used to tailor the numbers of simulated individuals in each category to those expected of your study system.
+## If the number of Pure, F1, F2 and Backcross individuals to be returned is not specified, this function defaults to returning the number of individuals provided. Because NewHybrids utilizes a Bayesian algorithm, results may be influenced by the proportions of individuals of different genotypic frequency categories provided, thus this function can be used to tailor the numbers of simulated individuals in each category to those expected of your study system.
 
 ### Suppose you expect that the majority of individuals in will be pure, with the numbers of Pure > F1 > F2 >= BC
 
 ### NOTE: "YourReferenceData.txt" is either data in that you wish to simulate in GenePop format OR
   ## if you going through the package example, it will be the file "SimPurePops_50_Loci_Panel.txt" created by getTopLoc
 
-freqbasedsim_Advanced(GenePopData = "~/ ... /YourReferenceData.txt", sample.sizePure = 100, sample.sizeF1 = 50, sample.sizeF2 = 10, sample.sizeBC = 10, NumSims = 3, NumReps = 3)
+freqbasedsim_GTFreq(GenePopData = "~/ ... /YourReferenceData.txt", sample.sizePure = 100, sample.sizeF1 = 50, sample.sizeF2 = 10, sample.sizeBC = 10, NumSims = 3, NumReps = 3)
 
 ## This will create three independent simulations, each replicated three times.
 ```
 
 ***
 
+
 <a name = "freqbasedUB2"/>
-<h4 class="text-primary"> freqbasedsim_UB2.R</h4>
+<h4 class="text-primary"> freqbasedsim_AlleleSample.R</h4>
 This function will simulate multigenerational hybrids in a more unbiased fashion than the other simulation functions. The function requires that two reference populations must be provided as a single *GenePop* format text file, such as the file created by **getTopLoc**.  
 The function first creates Pure1 and Pure2 individuals by drawing 2 alleles from each loci, without replacement from the two reference populations. By so doing, the genotypes of the reference populations are centred, and linkage disequilibria or deviations from Hardy-Weinberg that may have been present in the sampled individuals are eliminated. Subsequently, each F1 individual is created by drawing 1 allele per loci withouth replacement from the Pure1 individuals and 1 loci without replacement from the Pure2 individuals. F2 indivduals are created by drawning 2 alleles per loci without replacement from the F1 indivdiuals. Backcross individuals are created by drawing 1 allele per loci withouth replacement from the F1 individuals, and one without replacement from the appropriate Pure population individuals.
 
@@ -258,13 +230,13 @@ The function first creates Pure1 and Pure2 individuals by drawing 2 alleles from
 ### NOTE: "YourReferenceData.txt" is either data in that you wish to simulate in GenePop format OR
   ## if you going through the package example, it will be the file "SimPurePops_50_Loci_Panel.txt" created by getTopLoc
 
-freqbasedsim_UB2(GPD = "~/ ... /YourReferenceData.txt")
+freqbasedsim_AlleleSample(GPD = "~/ ... /YourReferenceData.txt")
 ```
 
 ***
 
 <a name = "nhdatageneratR"/>
-<h4 class="text-primary">nh\_analysis\_data\_generatoR.R</h4>
+<h4 class="text-primary">nh\_analysis\_simulateR\_generateR.R</h4>
 This function quickly creates files to be used to detect hybridization within experimental data. It does so by creating simulated reference populations from user provided data, and then merging the simulated data with the genotypes of unknown/experimental individuals. The user is able to specify which hybrid categories to include in the simulated data, as well as the number of individuals per category to simulate. The function will save a *NewHybrids* format file for analysis, along with a dataframe containing the names of the individuals included (including those that were simulated) in the *NewHybrids* formatted file.  
 <span style = "color:red"> <strong>NOTE:</strong></span> *nh_analysis_data_generatoR.R* creates a unique simulated data set each time it is run.   
 
@@ -342,7 +314,7 @@ nh_subset(NHData = "~/ ... /yourdata.txt", loci = loci.names[1:50]) ## function 
 ***
 
 <a name = "zcore"/>
-<h4 class="text-primary">nh\_zcore.R</h4>
+<h4 class="text-primary">nh\_Zcore.R</h4>
 This function will insert a column of known genotype categories <- Zvec into a NewHybrids formatted file to provide NewHybrids with prior information on the known genotype frequencies in the hybrid genotype frequency categories.The function matches a vector of categories (Zvec) to individuals, then output a NH format file, with a name indicating that the category vector has been added. The user must provide the Zvec(s) to the function in the form of a two column .csv file. The vector of genotype categories NEED NOT be the same length as the NewHybrids file - thus, time can be saved. 
 NOTE Zvec file must have column names, and the first column must be named "Individual" and contain the names of individuals to which categories must be given that match those in the first column of the NewHybrids dataset. NOTE both multiapllyZvec and applyuniqueZvec cannot be used at the same time. 
 
@@ -356,17 +328,17 @@ NOTE Zvec file must have column names, and the first column must be named "Indiv
 ```r
 ## to apply the same file of Zed scores to multiple files:
 
-nh_zcore(GetstheZdir = "~/ ... /yourNHFiles/", multiapplyZvec = "~/ ... /yourZeds.txt")  ## NOTE: Single file
+nh_Zcore(GetstheZdir = "~/ ... /yourNHFiles/", multiapplyZvec = "~/ ... /yourZeds.txt")  ## NOTE: Single file
 
 ## to apply unique files of Zed scores to corresponding files:
 
-nh_zcore(GetstheZdir = "~/ ... /yourNHFiles/", applyuniqueZvec = "~/ ... /yourZedFiles/") ## Zed files must all be placed in a single folder separate from the NewHybrids files AND they MUST follow the file name convention "NHFileName_Zvec.csv" where NHFileName is the same name as the file to which the Zvec is to be applied
+nh_Zcore(GetstheZdir = "~/ ... /yourNHFiles/", applyuniqueZvec = "~/ ... /yourZedFiles/") ## Zed files must all be placed in a single folder separate from the NewHybrids files AND they MUST follow the file name convention "NHFileName_Zvec.csv" where NHFileName is the same name as the file to which the Zvec is to be applied
 ```
 
 ***
 
 <a name = "precheck"/>
-<h4 class="text-primary"> preCheckR.R</h4>
+<h4 class="text-primary"> nh\_preCheckR.R</h4>
 When using *NewHybrids*, the Markov Chain Monte Carlo (MCMC) chains will occasionally fail to converge resulting, in *NewHybrids* spuriously returning the highest probability of assignment of nearly every individual to the F2 category. In such cases, the analysis should be re-run. *preCheckR.R* quickly assesses the results of many independent *NewHybrids* runs, and will flag instances in which the probability of assignment values indicate the chains appear to have failed to converge. Results flagged by *preCheckR.R* should be manually verified by the user.  
 <span style = "color:red"> <strong>NOTE:</strong></span> several of the functions in **hybriddetective** will not function correctly, or will fail if they are provided with results of non-converged runs. Thus, it is strongly recommended that *preCheckR.R* be run on every *NewHybrids* result.  
 
@@ -383,15 +355,15 @@ When using *NewHybrids*, the Markov Chain Monte Carlo (MCMC) chains will occasio
 
 ## to check results created by running parallelnh_xx
 
-preCheckR(PreDir = "~/ ... /NH.Results/", propCutOff = 0.5, PofZCutOff = 0.1) ## run with the default cut-off values; these could have been left blank.
-### preCheckR will now flag any results where more than 50% (propCutOFF) of EITHER Pure1 or Pure2 individuals are given a probability of being an F2 greater than 10% (PofZCutOff)
+nh_preCheckR(PreDir = "~/ ... /NH.Results/", propCutOff = 0.5, PofZCutOff = 0.1) ## run with the default cut-off values; these could have been left blank.
+### nh_preCheckR will now flag any results where more than 50% (propCutOFF) of EITHER Pure1 or Pure2 individuals are given a probability of being an F2 greater than 10% (PofZCutOff)
 
 ```
 
 ***
 
 <a name = "plotR"/>
-<h4 class="text-primary">nh_plotR.R</h4>
+<h4 class="text-primary">nh\_plotR.R</h4>
 This function will plot the cumulative probability of assignment (PofZ) for each individual in a *NewHybrids* analysis. *nh_plotR.R* can be used with both simulated and experimental datasets.  
 
 **Parameter** | **Description**
@@ -400,7 +372,7 @@ This function will plot the cumulative probability of assignment (PofZ) for each
 
 ####Usage
 ```r
-## Use plotR to visualize the cumulative probability of assignment for for each individual in the PofZ file specified by "NHResults"
+## Use nh_plotR to visualize the cumulative probability of assignment for for each individual in the PofZ file specified by "NHResults"
 
 nh_plotR(NHResults = "~/ ... /NH.Results/YourData_Results/YourData_PofZ.txt") ## plot results will be displayed by R 
 
@@ -450,7 +422,7 @@ nh_accuracy_checkR(NHResultsDir = "~/ ... /NH.Results/YourData_Results/", print.
 <a name = "power"/>
 <h4 class="text-primary">hybridpower</h4>
 This function will extract data from *NewHybrids* runs and evaluate the correct assignment to a given hybrid classification (i.e. Pure1, Pure2, F1, F2, BC1, and BC2). From this data, hybrid power will generate summary plots which detail assignment success (among simulations and replicates) as a function of the classification threshold (minimum probability of assignment threshold required for an individual to be assigned a hybrid class, scaling from 0.50-1.00). Diagnostic plots are also provided which detail variation among simulations, as well as to which hybrid classes individuals are _missassigned_ to. Summary data and *ggplot* objects are saved to a .RData output automatically. Outputs from this function are saved to the folder "Figures and Data" which is generated within the directory (specified by *dir*) that contains the *NewHybrids* output folders.  
-<span style = "color:red"> <strong>NOTE:</strong></span> *hybridpower* assumes all simulations and associated replicates are produced from *NewHybrids* analyses conducted on the same number of loci. Use *hybridpowercomp* if the number of loci varies among simulations.  
+<span style = "color:red"> <strong>NOTE:</strong></span> Where *hybridpower* is provided with results of simulations and associated replicates of only one candidate panel size, several warning messages associated with the fact that multiple levels (panel sizes) have not been provided to *ggplot2* these are expected, and do not influence the output of the function.
 
 **Parameter** | **Description**
 ------------|---------------------------------------------------------------  
@@ -482,27 +454,48 @@ This function will replicate the analysis of *hybridpower* but will partition th
 **Parameter** | **Description**
 ------------|---------------------------------------------------------------  
 *dir*| File path to the directory in which the NewHybrids results (in individual folders as returned by parallelNH_XX) are located. 
-*filetag*| An optional character vector to be applied as the name of the outputs. 
-*Thresholds*| A vector of thresholds which will be added to the plots showing the assignment success for different levels of probability of a given class estimated by NewHybrids. Default is (NULL) so if nothing is specified it will not add this to the output plots (success ~ threshold by class). 
-*samplesize*| The number of individuals per NewHybrids class. By (default: NULL) this data will be extracted from the "*individuals.txt" output from parallelnewhybrids if present in the same folder as the PofZ file. This can also explicitly defined as a vector (6 values corresponding to # in P1,P2,F1,F2,BC1,BC2) or a path to a *_Individuals.txt. 
+*save_output*| A logical statement indicating if the plots and data should be saved to the user's hard drive (default is TRUE)
+*return_workspace*| A logical statement indicating if the plots and data should be returned to the user's R workspace (default is FALSE)
+*Thresholds*| A vector of thresholds which will be added to the plots showing the assignment success for different levels of probability of a given class estimated by NewHybrids. Default is (0.5,0.6,0.7,0.8,0.9).
+*samplesize*| The number of individuals per NewHybrids class. By (default: NULL) this data will be extracted from the "*individuals.txt" output from parallelnewhybrids if present in the same folder as the PofZ file. This can also explicitly defined as a vector (6 values corresponding to # in P1,P2,F1,F2,BC1,BC2) or a path to a *_Individuals.txt. This option is currently deprecated.
 *CT*| The threshold posterior probability of assignment (PofZ) to F2 above which Pure Population 1 or Pure Population 2 individuals are flagged to indicate possible non-convergence. The default is 0.1.   
 *CTI*| The proportion of individuals in either Pure Population 1 OR Pure Population 2 allowed to exceed the F2 assignment threshold (PofZCutOff). The default is 0.5. 
 
 Plots Created
 
-**Plot Name** | **Plot Description**
+**Plot Name** | **Plot Description** 
 ------------|---------------------------------------------------------------  
-*Accuracy_ByThreshold_LinePlot_AllClass*| NULL
-*Accuracy_ByThreshold_LinePlot_PureHyb*| NULL
-*Accuracy_BoxPlot*| NULL
-*Accuracy_LinePlot_ClassFacet*| NULL
-*Accuracy_LinePlot_ClassFacetSD*| NULL
-*Efficiency_ByThreshold_LinePlot_AllClass*| NULL
-*Efficiency_ByThreshold_LinePlot_PureHyb*| NULL
-*E*| NULL
-*E*| NULL
-*E*| NULL
-*E*| NULL
+*Plot_1*| Accuracy boxplot - boxes are hybrid classes at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size
+*Plot_2*| Efficiency boxplot - boxes are hybrid classes, at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size
+*Plot_3*| Efficiency boxplot - boxes are hybrid classes, at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size 
+*Plot_4*| Accuracy boxplot - boxes are pure population 1, pure population 2 and all hybrids, at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size
+*Plot_5*| Efficiency boxplot - boxes are pure population 1, pure population 2 and all hybrids, at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size
+*Plot_6*| Power boxplot - boxes are pure population 1, pure population 2 and all hybrids, at critical posterior probability thresholds of 0.5, 0.75, and 0.9, and the plot may be faceted by panel size
+*Plot_7*| Accuracy lineplot - lines are coloured by hybrid class and represent the accuracy ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_8*| Efficiency lineplot - lines are coloured by hybrid class and represent the efficiency ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_9*| Power lineplot - lines are coloured by hybrid class and represent the power ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_10*| Accuracy lineplot - lines are coloured by pure population 1, pure population 2 and all hybrids, and represent the accuracy ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_11*| Efficiency lineplot - lines are coloured by pure population 1, pure population 2 and all hybrids, and represent the efficiency ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_12*| Power lineplot - lines are coloured by pure population 1, pure population 2 and all hybrids, and represent the power ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot may be facted by panel size
+*Plot_13*| Accuracy lineplot - lines are coloured by hybrid class and represent the accuracy ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot is facted by grouping the hybrid classes into pure groups, F1 and F2, and backcrosses as well as panel size
+*Plot_14*| Efficiency lineplot - lines are coloured by hybrid class and represent the efficiency ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot is facted by grouping the hybrid classes into pure groups, F1 and F2, and backcrosses as well as panel size
+*Plot_15*| Power lineplot - lines are coloured by hybrid class and represent the power ± sd at critical posterior probabilities from 0.5 to 1.0, and the plot is facted by grouping the hybrid classes into pure groups, F1 and F2, and backcrosses as well as panel size
+*Plot_16*| Accuracy lineplot - lines are coloured by panel size and represent the accuracy ± sd at critical posterior probabilities from 0.5 to 1.0, and each hybrid class is depicted in a separate facet
+*Plot_17*| Efficiency lineplot - lines are coloured by panel size and represent the efficiency ± sd at critical posterior probabilities from 0.5 to 1.0, and each hybrid class is depicted in a separate facet
+*Plot_18*| Power lineplot - lines are coloured by panel size and represent the power ± sd at critical posterior probabilities from 0.5 to 1.0, and each hybrid class is depicted in a separate facet
+*Plot_19*| Accuracy lineplot - lines are coloured by panel size and represent the accuracy ± sd at critical posterior probabilities from 0.5 to 1.0, and the two pure populations, and all hybrids are depicted in separate facets
+*Plot_20*| Efficiency lineplot - lines are coloured by panel size and represent the efficiency ± sd at critical posterior probabilities from 0.5 to 1.0, and the two pure populations, and all hybrids are depicted in separate facets
+*Plot_21*| Power lineplot - lines are coloured by panel size and represent the power ± sd at critical posterior probabilities from 0.5 to 1.0, and the two pure populations, and all hybrids are depicted in separate facets
+*Plot_22*| Accuracy dotplot - points are the accuracy ± sd and are coloured by hybrid class at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_23*| Efficiency dotplot - points are the accuracy ± sd and are coloured by hybrid class at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_24*| Power dotplot - points are the accuracy ± sd and are coloured by hybrid class at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_25*| Accuracy dotplot - points are the accuracy ± sd and are coloured by pure population 1, pure population 2 and all hybrids at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_26*| Efficiency dotplot - points are the accuracy ± sd and are coloured by pure population 1, pure population 2 and all hybrids at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_27*| Power dotplot - points are the accuracy ± sd and are coloured by pure population 1, pure population 2 and all hybrids at the critical posterior probabilities specified by *Thresholds*. The plot is facted by the values specified in *Thresholds*
+*Plot_28*| Type I Error boxplot - boxes are hybrid classes at critical posterior probability thresholds specified in *Thresholds* and the plot may be faceted by panel size
+*Plot_29*| Type I Error lineplot - the line is the overall rate of Type I error in all hybrid classes across a range of posterior probability thresholds from 0.5 to 1.0. The plot may also be facted by panel size.
+*Plot_30*| Mean Posterior Probability boxplot - The mean posterior probability score for each hybrid class is per simulation is plotted.
+*Plot_31*| Mean Posterior Probability boxplot - The mean posterior probability score for pure population 1, pure population 2 and all hybrids per simulation is plotted.
 
 ####Usage
 
