--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ In addition, **hybriddetective** includes plotting functionality to generate bot
 **nh_plotR.R** |  Plots cumulative probability of assignments from *NewHybrids* results for each individual | [_Error Checking and Diagnostics_](#plotR)
 **nh_multiplotR.R** |  Plots cumulative probability of assignments from *NewHybrids* results for each individual for all results within a given folder | [_Error Checking and Diagnostics_](#multiplotR)
 **nh_accuracy_checkR.R** | Calculates and can print to screen the proportion of simulated individuals assigned to the correct hybrid category at three levels of stringency (PofZ >= 0.5, 0.75 and 0.9) | [_Error Checking and Diagnostics_](#accuracy)
-**hybridpowercomp.R** |  Evaluates the accuracy, efficiency, and power of panels. Allows the efficacy of multiple panels of varying numbers of markers to be compared.| [_Quantification and Analysis_](#powercomp)
+**hybridPowerComp.R** |  Evaluates the accuracy, efficiency, and power of panels. Allows the efficacy of multiple panels of varying numbers of markers to be compared.| [_Quantification and Analysis_](#powercomp)
 **nh_panel_delta_plotR.R** |  Plots the change in individual genotype class probability of assignment for different panel sizes.| [_Quantification and Analysis_](#deltaplot)
 **nh_build_Example_Data.R** |  Writes example *NewHybrids* results to be evaluated with the function *hybridpowercomp*
 
